--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,40 @@
+attrs==21.4.0
 autopep8==1.6.0
+beautifulsoup4==4.10.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
+cycler==0.11.0
+Deprecated==1.2.13
 et-xmlfile==1.1.0
 flake8==4.0.1
+fonttools==4.31.2
 idna==3.3
+kiwisolver==1.4.2
+lxml==4.8.0
+matplotlib==3.5.1
 mccabe==0.6.1
 numpy==1.22.3
 openpyxl==3.0.9
+packaging==21.3
 pandas==1.4.1
+Pillow==9.1.0
+pyarrow==7.0.0
+pybaseball==2.2.1
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
+PyGithub==1.55
+PyJWT==2.3.0
+PyNaCl==1.5.0
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
+scipy==1.8.0
 six==1.16.0
+soupsieve==2.3.1
 toml==0.10.2
+tqdm==4.63.1
 urllib3==1.26.9
+wrapt==1.14.0
